--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "page web Ohmyfood",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./main.scss:style.css"
+    "sass": "sass --watch ./sass/main.scss:style.css"
   },
   "repository": {
     "type": "git",
